test/libsolidity/syntaxTests/storageLayoutSpecifier/array_literal.sol
contract C layout at [1, 2, 3] {}
// ----
// UnimplementedFeatureError 1834: (0-33): Code generation is not supported for contracts with specified storage layout base.
